feat: 改用 listwidget 替换 listview

--- a/SubUI/UpdatePlugins/updateplugindialogue.ui
+++ b/SubUI/UpdatePlugins/updateplugindialogue.ui
@@ -40,7 +40,7 @@
     </layout>
    </item>
    <item>
-    <widget class="QListView" name="GitPathListView"/>
+    <widget class="QListWidget" name="GitPathListWidget"/>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
